@startuml Class_Diagram_SMK_Dua_Mei

skinparam classAttributeIconSize 0
skinparam classFontSize 11
skinparam classFontStyle bold
skinparam attributeFontSize 10
skinparam ArrowColor #003580
skinparam ArrowThickness 1.5
skinparam class {
  BackgroundColor #EEF4FF
  BorderColor #003580
  FontColor Black
}
skinparam stereotypeCBackgroundColor #D0E4FF
skinparam nodesep 40
skinparam ranksep 50

title \nDiagram Kelas — Sistem Pemesanan & Pengadaan Barang\nSMK Dua Mei\n

' ══ ENUMS ═══════════════════════════════════════════
enum UserRole {
  guru
  kepala_sekolah
  admin
  admin_it
}

enum StatusPesanan {
  menunggu
  disetujui
  ditolak
  diproses
  selesai
  revisi
}

enum Prioritas {
  rendah
  sedang
  tinggi
}

enum TipeNotif {
  info
  sukses
  peringatan
  ditolak
}

enum TargetRole {
  pemohon
  admin
  kepala_sekolah
  semua
}

enum JenisForm {
  pemesanan
  pengadaan
}

enum StatusApproval {
  menunggu
  disetujui
  ditolak
  revisi
}

' ══ CLASSES ═════════════════════════════════════════

class User {
  +id : String
  +username : String
  +password : String
  +nama : String
  +jabatan : String
  +unitDepartemen : String
  +role : UserRole
  +createdAt : DateTime
  +updatedAt : DateTime
  --
  +login() : Boolean
  +logout() : void
}

class Pemesanan {
  +id : String
  +nomorPesanan : String
  +tanggalPesan : String
  +namaPemesan : String
  +jabatan : String
  +unitDepartemen : String
  +keperluan : String
  +tanggalDibutuhkan : String
  +prioritas : Prioritas
  +status : StatusPesanan
  +catatanPemesan : String?
  +catatanAdmin : String?
  +createdAt : DateTime
  +updatedAt : DateTime
  --
  +ajukan() : String
  +revisi() : String
  +updateStatus() : void
}

class BarangItem {
  +id : String
  +namaBarang : String
  +jumlah : Int
  +satuan : String
  +keterangan : String?
  +hargaSatuan : Int?
}

class Pengadaan {
  +id : String
  +nomorPengadaan : String
  +tanggalPengadaan : String
  +namaPengaju : String
  +jabatan : String
  +unitDepartemen : String
  +jenisBarang : String
  +spesifikasi : String
  +jumlah : Int
  +satuan : String
  +estimasiHarga : Int
  +tujuanPengadaan : String
  +sumberDana : String
  +prioritas : Prioritas
  +status : StatusPesanan
  +dokumenPendukung : String?
  +catatanPengaju : String?
  +catatanAdmin : String?
  +createdAt : DateTime
  +updatedAt : DateTime
  --
  +ajukan() : String
  +updateStatus() : void
}

class KatalogBarang {
  +id : String
  +namaBarang : String
  +kategori : String
  +stok : Int
  +satuan : String
  +hargaSatuan : Int
  +deskripsi : String
  +minStok : Int
  +gambarEmoji : String
  +gambarUrl : String?
  +createdAt : DateTime
  +updatedAt : DateTime
  --
  +updateStok() : void
  +cekStokMinimum() : Boolean
}

class Notifikasi {
  +id : String
  +judul : String
  +pesan : String
  +tipe : TipeNotif
  +targetRole : TargetRole
  +nomorReferensi : String?
  +jenisForm : JenisForm?
  +sudahDibaca : Boolean
  +createdAt : DateTime
  --
  +tandaiBaca() : void
  +hapus() : void
}

class ApprovalStep {
  +id : String
  +nomorReferensi : String
  +jenisForm : JenisForm
  +langkah : Int
  +status : StatusApproval
  +namaApprover : String
  +jabatanApprover : String
  +catatan : String?
  +tanggal : DateTime
  --
  +setujui() : void
  +tolak() : void
}

' ══ RELASI ANTAR CLASS ══════════════════════════════

User "1" --> "0..*" Pemesanan     : mengajukan >
User "1" --> "0..*" Pengadaan     : mengajukan >

Pemesanan "1" *-- "1..*" BarangItem    : memiliki >
Pemesanan "1" --> "0..*" ApprovalStep  : dicatat di >
Pengadaan "1" --> "0..*" ApprovalStep  : dicatat di >

' ══ RELASI ENUM ═════════════════════════════════════
User       ..> UserRole       : <<use>>
Pemesanan  ..> StatusPesanan  : <<use>>
Pemesanan  ..> Prioritas      : <<use>>
Pengadaan  ..> StatusPesanan  : <<use>>
Pengadaan  ..> Prioritas      : <<use>>
Notifikasi ..> TipeNotif      : <<use>>
Notifikasi ..> TargetRole     : <<use>>
Notifikasi ..> JenisForm      : <<use>>
ApprovalStep ..> JenisForm    : <<use>>
ApprovalStep ..> StatusApproval : <<use>>

@enduml
